# tello_ws

./: .gitignore  LICENSE  README.md
scripts/: orbslam.sh
src/tello/: package.xml  setup.cfg  setup.py
src/tello/launch/: tello.launch.py
src/tello/resource/: ost.txt  ost.yaml
src/tello/tello/: node.py
src/tello_control/: package.xml  setup.cfg  setup.py
src/tello_control/tello_control/: tello_control.py
src/tello_msg/: CMakeLists.txt  package.xml
